Profile basic design

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -19,7 +19,7 @@ $positive:                        #1F7FA1 !default; //dark blue
 $balanced:                        #16D5F7 !default; //light blue
 $energized:                       #FEF177 !default; //yellow
 $assertive:                       #FF3364 !default; //dark pink
-$royal:                           #1F7FA1 !default; //dark blue
+$royal:                           #777    !default; //dark blue
 $dark:                            #444    !default; //black
 
 $button-energized-text:           #777 !default;
