--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -3958,14 +3958,14 @@ a.subdued {
     .bar.bar-energized.bar-footer {
       background-image: linear-gradient(180deg, #feee5e, #feee5e 50%, transparent 50%); }
   .bar.bar-royal {
-    border-color: #18647f;
-    background-color: #1f7fa1;
-    background-image: linear-gradient(0deg, #18647f, #18647f 50%, transparent 50%);
+    border-color: #636363;
+    background-color: #777777;
+    background-image: linear-gradient(0deg, #636363, #636363 50%, transparent 50%);
     color: #fff; }
     .bar.bar-royal .title {
       color: #fff; }
     .bar.bar-royal.bar-footer {
-      background-image: linear-gradient(180deg, #18647f, #18647f 50%, transparent 50%); }
+      background-image: linear-gradient(180deg, #636363, #636363 50%, transparent 50%); }
   .bar.bar-dark {
     border-color: #111;
     background-color: #444444;
@@ -4220,15 +4220,15 @@ a.subdued {
     background: none; }
 
 .bar-royal .button {
-  border-color: #18647f;
-  background-color: #1f7fa1;
+  border-color: #636363;
+  background-color: #777777;
   color: #fff; }
   .bar-royal .button:hover {
     color: #fff;
     text-decoration: none; }
   .bar-royal .button.active, .bar-royal .button.activated {
-    border-color: #18647f;
-    background-color: #18647f;
+    border-color: #636363;
+    background-color: #636363;
     box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.1); }
   .bar-royal .button.button-clear {
     border-color: transparent;
@@ -4439,14 +4439,14 @@ a.subdued {
 
 .tabs-royal > .tabs,
 .tabs.tabs-royal {
-  border-color: #18647f;
-  background-color: #1F7FA1;
-  background-image: linear-gradient(0deg, #18647f, #18647f 50%, transparent 50%);
+  border-color: #636363;
+  background-color: #777;
+  background-image: linear-gradient(0deg, #636363, #636363 50%, transparent 50%);
   color: #fff; }
   .tabs-royal > .tabs .tab-item .badge,
   .tabs.tabs-royal .tab-item .badge {
     background-color: #fff;
-    color: #1F7FA1; }
+    color: #777; }
 
 .tabs-dark > .tabs,
 .tabs.tabs-dark {
@@ -4602,7 +4602,7 @@ a.subdued {
   top: 4%; }
 
 .tabs-striped.tabs-royal .tabs {
-  background-color: #1F7FA1; }
+  background-color: #777; }
 
 .tabs-striped.tabs-royal .tab-item {
   color: rgba(255, 255, 255, 0.4);
@@ -4666,7 +4666,7 @@ a.subdued {
   background-image: none; }
 
 .tabs-striped.tabs-background-royal .tabs {
-  background-color: #1F7FA1;
+  background-color: #777;
   background-image: none; }
 
 .tabs-striped.tabs-background-dark .tabs {
@@ -4772,14 +4772,14 @@ a.subdued {
       opacity: 1; }
 
 .tabs-striped.tabs-color-royal .tab-item {
-  color: rgba(31, 127, 161, 0.4);
+  color: rgba(119, 119, 119, 0.4);
   opacity: 1; }
   .tabs-striped.tabs-color-royal .tab-item .badge {
     opacity: 0.4; }
   .tabs-striped.tabs-color-royal .tab-item.tab-item-active, .tabs-striped.tabs-color-royal .tab-item.active, .tabs-striped.tabs-color-royal .tab-item.activated {
     margin-top: -2px;
-    color: #1F7FA1;
-    border: 0 solid #1F7FA1;
+    color: #777;
+    border: 0 solid #777;
     border-top-width: 2px; }
     .tabs-striped.tabs-color-royal .tab-item.tab-item-active .badge, .tabs-striped.tabs-color-royal .tab-item.active .badge, .tabs-striped.tabs-color-royal .tab-item.activated .badge {
       top: 2px;
@@ -4843,9 +4843,9 @@ a.subdued {
 
 .tabs-background-royal .tabs,
 .tabs-background-royal > .tabs {
-  background-color: #1F7FA1;
-  background-image: linear-gradient(0deg, #18647f, #18647f 50%, transparent 50%);
-  border-color: #18647f; }
+  background-color: #777;
+  background-image: linear-gradient(0deg, #636363, #636363 50%, transparent 50%);
+  border-color: #636363; }
 
 .tabs-background-dark .tabs,
 .tabs-background-dark > .tabs {
@@ -4931,13 +4931,13 @@ a.subdued {
       opacity: 1; }
 
 .tabs-color-royal .tab-item {
-  color: rgba(31, 127, 161, 0.4);
+  color: rgba(119, 119, 119, 0.4);
   opacity: 1; }
   .tabs-color-royal .tab-item .badge {
     opacity: 0.4; }
   .tabs-color-royal .tab-item.tab-item-active, .tabs-color-royal .tab-item.active, .tabs-color-royal .tab-item.activated {
-    color: #1F7FA1;
-    border: 0 solid #1F7FA1; }
+    color: #777;
+    border: 0 solid #777; }
     .tabs-color-royal .tab-item.tab-item-active .badge, .tabs-color-royal .tab-item.active .badge, .tabs-color-royal .tab-item.activated .badge {
       opacity: 1; }
 
@@ -4990,7 +4990,7 @@ ion-tabs.tabs-color-active-energized .tab-item {
 ion-tabs.tabs-color-active-royal .tab-item {
   color: #444; }
   ion-tabs.tabs-color-active-royal .tab-item.tab-item-active, ion-tabs.tabs-color-active-royal .tab-item.active, ion-tabs.tabs-color-active-royal .tab-item.activated {
-    color: #1F7FA1; }
+    color: #777; }
 
 ion-tabs.tabs-color-active-dark .tab-item {
   color: #fff; }
@@ -5173,7 +5173,7 @@ ion-tabs.tabs-color-active-dark .tab-item {
   .tab-item.tab-item-active.tab-item-royal,
   .tab-item.active.tab-item-royal,
   .tab-item.activated.tab-item-royal {
-    color: #1F7FA1; }
+    color: #777; }
   .tab-item.tab-item-active.tab-item-dark,
   .tab-item.active.tab-item-dark,
   .tab-item.activated.tab-item-dark {
@@ -5714,8 +5714,8 @@ ion-tabs.tabs-color-active-dark .tab-item {
     background-color: #FEF177;
     color: #777; }
   .item.item-royal {
-    border-color: #18647f;
-    background-color: #1F7FA1;
+    border-color: #636363;
+    background-color: #777;
     color: #fff; }
   .item.item-dark {
     border-color: #111;
@@ -5798,8 +5798,8 @@ ion-tabs.tabs-color-active-dark .tab-item {
   .item-complex.activated .item-content.item-royal,
   .item .item-content.active.item-royal,
   .item .item-content.activated.item-royal {
-    border-color: #18647f;
-    background-color: #18647f; }
+    border-color: #636363;
+    background-color: #636363; }
   .item.active.item-dark,
   .item.activated.item-dark,
   .item-complex.active .item-content.item-dark,
@@ -5951,12 +5951,12 @@ a.item-content {
     background-color: #feee5e; }
 
 .item-complex.item-royal > .item-content {
-  border-color: #18647f;
-  background-color: #1F7FA1;
+  border-color: #636363;
+  background-color: #777;
   color: #fff; }
   .item-complex.item-royal > .item-content.active, .item-complex.item-royal > .item-content:active {
-    border-color: #18647f;
-    background-color: #18647f; }
+    border-color: #636363;
+    background-color: #636363; }
 
 .item-complex.item-dark > .item-content {
   border-color: #111;
@@ -6589,7 +6589,7 @@ button.item.item-button-right {
 
 .tabs .tab-item .badge.badge-royal,
 .badge.badge-royal {
-  background-color: #1F7FA1;
+  background-color: #777;
   color: #fff; }
 
 .tabs .tab-item .badge.badge-dark,
@@ -6774,8 +6774,8 @@ button.item.item-button-right {
     stroke: #FEF177;
     fill: #FEF177; }
   .spinner.spinner-royal {
-    stroke: #1F7FA1;
-    fill: #1F7FA1; }
+    stroke: #777;
+    fill: #777; }
   .spinner.spinner-dark {
     stroke: #444;
     fill: #444; }
@@ -6816,7 +6816,7 @@ button.item.item-button-right {
   stop-color: #FEF177; }
 
 .spinner-spiral.spinner-royal .stop2 {
-  stop-color: #1F7FA1; }
+  stop-color: #777; }
 
 .spinner-spiral.spinner-dark .stop2 {
   stop-color: #444; }
@@ -7222,12 +7222,12 @@ input[type="checkbox"][readonly] {
 
 .checkbox-royal input:before,
 .checkbox-royal .checkbox-icon:before {
-  border-color: #1F7FA1; }
+  border-color: #777; }
 
 .checkbox-royal input:checked:before,
 .checkbox-royal input:checked + .checkbox-icon:before {
-  background: #1F7FA1;
-  border-color: #1F7FA1; }
+  background: #777;
+  border-color: #777; }
 
 .checkbox-dark input:before,
 .checkbox-dark .checkbox-icon:before {
@@ -7400,8 +7400,8 @@ input:checked + .checkbox-icon:after {
   background-color: #FEF177; }
 
 .toggle.toggle-royal input:checked + .track {
-  border-color: #1F7FA1;
-  background-color: #1F7FA1; }
+  border-color: #777;
+  background-color: #777; }
 
 .toggle.toggle-dark input:checked + .track {
   border-color: #444;
@@ -7548,10 +7548,10 @@ input:checked + .checkbox-icon:after {
   background-color: #FEF177; }
 
 .toggle-small .toggle-royal input:checked + .track {
-  background-color: rgba(31, 127, 161, 0.5); }
+  background-color: rgba(119, 119, 119, 0.5); }
 
 .toggle-small .toggle-royal input:checked + .track .handle {
-  background-color: #1F7FA1; }
+  background-color: #777; }
 
 .toggle-small .toggle-dark input:checked + .track {
   background-color: rgba(68, 68, 68, 0.5); }
@@ -7715,9 +7715,9 @@ input:checked + .checkbox-icon:after {
   .range.range-energized input::-ms-fill-lower {
     background: #FEF177; }
   .range.range-royal input::-webkit-slider-thumb:before {
-    background: #1F7FA1; }
+    background: #777; }
   .range.range-royal input::-ms-fill-lower {
-    background: #1F7FA1; }
+    background: #777; }
   .range.range-dark input::-webkit-slider-thumb:before {
     background: #444; }
   .range.range-dark input::-ms-fill-lower {
@@ -7842,7 +7842,7 @@ input:checked + .checkbox-icon:after {
   .item-select.item-energized:after, .item-select.item-energized .input-label {
     color: #777; }
   .item-select.item-royal select {
-    background: #1F7FA1;
+    background: #777;
     color: #fff; }
   .item-select.item-royal:after, .item-select.item-royal .input-label {
     color: #fff; }
@@ -8112,30 +8112,30 @@ progress {
         box-shadow: none;
         color: #fff; }
   .button.button-royal {
-    border-color: #18647f;
-    background-color: #1F7FA1;
+    border-color: #636363;
+    background-color: #777;
     color: #fff; }
     .button.button-royal:hover {
       color: #fff;
       text-decoration: none; }
     .button.button-royal.active, .button.button-royal.activated {
-      border-color: #18647f;
-      background-color: #18647f;
+      border-color: #636363;
+      background-color: #636363;
       box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.1); }
     .button.button-royal.button-clear {
       border-color: transparent;
       background: none;
       box-shadow: none;
-      color: #1F7FA1; }
+      color: #777; }
     .button.button-royal.button-icon {
       border-color: transparent;
       background: none; }
     .button.button-royal.button-outline {
-      border-color: #1F7FA1;
+      border-color: #777;
       background: transparent;
-      color: #1F7FA1; }
+      color: #777; }
       .button.button-royal.button-outline.active, .button.button-royal.button-outline.activated {
-        background-color: #1F7FA1;
+        background-color: #777;
         box-shadow: none;
         color: #fff; }
   .button.button-dark {
@@ -8821,13 +8821,13 @@ a.button {
   border-color: #feee5e; }
 
 .royal, a.royal {
-  color: #1F7FA1; }
+  color: #777; }
 
 .royal-bg {
-  background-color: #1F7FA1; }
+  background-color: #777; }
 
 .royal-border {
-  border-color: #18647f; }
+  border-color: #636363; }
 
 .dark, a.dark {
   color: #444; }
