--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Login">
-  <ion-header-bar class="bar-royal item-icon-left">
+  <ion-header-bar class="bar-positive item-icon-left">
     <i class="icon ion-log-in"> </i>
     <h1 class="title">Login</h1>
   </ion-header-bar>
