--- a/www/templates/approveleaves.html
+++ b/www/templates/approveleaves.html
@@ -34,10 +34,10 @@
 			</div>
 		</div>
 		<div class="button-bar">
-		  	<button class="button button-clear button-balanced" style="" ng-if="!leave.isApproved && !leave.isRevoked" ng-click="">Approve</button>
+		  	<button class="button button-clear button-balanced" style="" ng-if="!leave.isApproved && !leave.isRevoked" ng-click="filteredLeaves.approve(leave)">Approve</button>
 		  	<button class="button button-clear button-balanced" style="" ng-if="!leave.isApproved && leave.isRevoked" ng-disabled="true">Approve</button>
 		  	<p class="button button-clear button-balanced button-small" style="max-height:70px" ng-if="leave.isApproved">Approved on </br>{{leave.inspectedOn | date:'mediumDate'}}</p>
-		  	<button class="button button-clear button-assertive" style="" ng-if="!leave.isRejected && !leave.isRevoked" ng-click="">Reject</button>
+		  	<button class="button button-clear button-assertive" style="" ng-if="!leave.isRejected && !leave.isRevoked" ng-click="filteredLeaves.reject(leave)">Reject</button>
 		  	<button class="button button-clear button-assertive" style="" ng-if="!leave.isRejected && leave.isRevoked" ng-disabled="true">Reject</button>
 		  	<p class="button button-clear button-assertive button-small" style="max-height:70px" ng-if="leave.isRejected">Rejected on </br>{{leave.inspectedOn | date:'mediumDate'}}</p>
 	  	</div>
