Add profile page to menu list

--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Profile">
+<ion-view view-title="Profile" cache-view="false">
 	<ion-content>
 	<script type="text/ng-template" id="error-messages">
 	  <div class="error-msg" ng-message="required">This field is required</div>
