Forgot password page

--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -35,6 +35,6 @@
     </form>
     <a class="button button-clear button-dark icon-left ion-person-add" ng-href="#/register">Register</a>
     </br>
-    <button class="button button-clear button-dark icon-left ion-sad">Forgot password</button>
+    <button class="button button-clear button-dark icon-left ion-sad" ng-click="showPwdResetModal()">Forgot password</button>
   </ion-content>
 </ion-view>
