--- a/www/templates/applyleave.html
+++ b/www/templates/applyleave.html
@@ -33,7 +33,7 @@
 
 	        <!-- Submit -->
 	        <label class="item">
-	          <button class="button button-block button-full button-energized button-dark-text rounded-corner" ng-disabled="leaveForm.$invalid" type="button" ng-click="applyLeave(leaveForm)">Apply</button>
+	          <button class="button  button-full button-energized rounded-corner" ng-disabled="leaveForm.$invalid" type="button" ng-click="applyLeave(leaveForm)">Apply</button>
 	        </label>
         </form>
     </div>
