--- a/www/templates/forgotpassword.html
+++ b/www/templates/forgotpassword.html
@@ -1,5 +1,6 @@
 <div class="modal">
-  <ion-header-bar>
+  <ion-header-bar align-title="center" class="bar-energized">
+    <button class="button button-icon ion-alert-circled"></button>
     <h1 class="title">Forgot password</h1>
   </ion-header-bar>
   <ion-content>
@@ -19,11 +20,11 @@
 
           <!-- Buttons -->
           <label class="item ">
-            <button class="button button-block button-full button-balanced" ng-disabled="passwordRetrievalForm.$invalid" ng-click="requestPwdReset()">Help me reset</button>
+            <button class="button button-block button-full button-energized rounded-corner" ng-disabled="passwordRetrievalForm.$invalid" ng-click="requestPwdReset()">Help me reset</button>
           </label>
 
           <label class="item ">
-            <button class="button button-block button-full button-balanced" ng-click="cancelPwdRequest()">Go back</button>
+            <button class="button button-block button-full button-balanced rounded-corner" ng-click="cancelPwdRequest()">Go back</button>
           </label>
       </div>
     </form>
