--- a/www/templates/leaves.html
+++ b/www/templates/leaves.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Title!" cache-view="false">
 
-    <ion-tabs class="tabs-positive tabs-icon-top">
+    <ion-tabs class="tabs-energized tabs-icon-top">
   		<ion-tab title="Approve" ng-if="isLeader" ui-sref="app.leaves.approve" icon-on="ion-ios-checkmark" icon-off="ion-ios-checkmark-outline">
 	  		<ion-nav-view name="approveLeavesTab">
 	  		</ion-nav-view>
