--- a/www/templates/register.html
+++ b/www/templates/register.html
@@ -1,5 +1,6 @@
 <ion-view view-title="Registration">
-	<ion-header-bar>
+  <ion-header-bar align-title="center" class="bar-energized">
+    <button class="button button-icon ion-compose"></button>
     <h1 class="title">Registration</h1>
   </ion-header-bar>
   <ion-content>
@@ -46,7 +47,7 @@
         
         <!-- Submit -->
         <label class="item">
-        	<button class="button button-block button-full button-balanced" ng-disabled="registerForm.$invalid" type="submit">Register</button>
+        	<button class="button button-block button-full button-balanced rounded-corner" ng-disabled="registerForm.$invalid" type="submit">Register</button>
         </label>
       </div>
     </form>
